<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/document_introduction"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.IntroductionFirstFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/next_button"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColor="@color/white"
                android:text="@string/introduction_first_text"
                android:textStyle="bold"
                android:background="@drawable/shape_rounded_corners"/>

        <!--表面-->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:weightSum="1">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/standartd_text_color"
                    android:text="@string/drive_license_front"
                    android:layout_weight="0.5"/>
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/drive_license_front"
                    android:layout_weight="0.5"/>
        </LinearLayout>

        <!--横線-->
        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightGrey"/>

        <!--斜め-->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:weightSum="1">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/standartd_text_color"
                    android:text="@string/drive_license_diagonal_45"
                    android:layout_weight="0.5"/>
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/drive_license_diagonal"
                    android:layout_weight="0.5"/>
        </LinearLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_marginBottom="15dp"
                android:textColor="@color/home_text_color"
                android:textSize="9dp"
                android:text="@string/intorduction_diagonal_notice"/>

        <!--横線-->
        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightGrey"/>

        <!--裏面-->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:weightSum="1">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/standartd_text_color"
                    android:text="@string/drive_license_back"
                    android:layout_weight="0.5"/>
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/drive_license_back"
                    android:layout_weight="0.5"/>
        </LinearLayout>

    </LinearLayout>


    <!--次へ進むボタン-->
    <jp.co.polarify.onboarding.sdk.view.SafetyButton
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="32dp"
            android:text="@string/document_next"
            android:background="@drawable/next_button_design"
            android:textStyle="bold"
            android:textSize="@dimen/button_font_size"
            android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>
